# smlpy

./: .gitignore  README.md  main.py  obis_t_kennzahlen.yaml  pyproject.toml
smlpy/: __init__.py  data_reader.py  errors.py  obis_t_kennzahlen.yaml  sml_reader.py  units.py
test/: test_sml_reader.py
