[tool.poetry]
name = "smlpy"
version = "0.1.0"
description = ""
authors = ["christian.sauer <christian.sauer@codecentric.de>"]

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pip = "^20.2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
